--- a/style.css
+++ b/style.css
@@ -13,15 +13,21 @@ body{
 }
 
 .login{
-  background-color: rgba(44, 42, 42, 0.29);
+  background-color: rgba(44, 42, 42, 0.30);
+  align-items: center;
   position: absolute;
   height: 100vh;
   width: 100%;
   display: flex;
-  align-items: center;
   justify-content: center;
 }
 
+.Mycontatcs{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
 .pop-up{
   height: 400px;
   width: 100%;
